shared: FORMAT_TIMESTAMP_MAX +1

5 is for weekday+comma+space, but week days in french have 4 digits

https://bugs.freedesktop.org/show_bug.cgi?id=57411